--- a/links.html
+++ b/links.html
@@ -20,6 +20,18 @@
 </br>
 </br>
 
+    <table style="width:100%">
+  <tr>
+    <th>discente  </th>
+    <td> Link : <a href="https://github.com/samcost" > Samanta </a></td>
+  </tr>
+   <tr>
+    <th>discente  </th>
+    <td> Link : <a href="github.com/joaomcr" > Samanta </a></td>
+  </tr>
+ 
+  </table>
+
     
     
      <a href="index.html">Home</a>
