--- a/links.html
+++ b/links.html
@@ -27,7 +27,7 @@
   </tr>
    <tr>
     <th>discente  </th>
-    <td> Link : <a href="github.com/joaomcr" > Samanta </a></td>
+    <td> Link : <a href="github.com/joaomcr" > João MArc </a></td>
   </tr>
  
   </table>
