modificacao de contato

--- a/links.html
+++ b/links.html
@@ -53,5 +53,5 @@
 
     
     
-     <a  align="center;"  href="index.html">Home</a>
+     <a  aling="center;"  href="index.html">Home</a>
   </body>
