--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title> Perfil - Amadeu Pereira  </title>
   </head>
   
-  <body style="background-color:rgb(0, 242, 255);">
+  <body background="images/fundo1.jpg">
     
     <h2 style="background-color:DodgerBlue;" ALIGN ="CENTER">
       OLA SOU AMADEU , SEJA BEM VINDO AO MEU PERFIL PESSOAL 
