adicionando fundo e css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
  
   
   <head>
+    <head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head> 
+    
      <meta charset ="UTF-8">
     <title> Perfil - Amadeu Pereira  </title>
   </head>
