--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -48,7 +48,7 @@
 </br></br>
 </br>
   <li class="media">
-    <img class="mr-3" src="img/item1.jpg" width="150px" height="150px" >
+    <img class="mr-3" src="img/perd.jpg" width="150px" height="150px" >
     <div class="media-body">
       <h5 class="mt-0 mb-1">Pederneira </h5>
      item utilizado para ajudar a acender fogueiras ou criar faiscas. 
@@ -58,7 +58,7 @@
   </br>
   
   <li class="media">
-    <img class="mr-3" src="img/item1.jpg" width="150px" height="150px" >
+    <img class="mr-3" src="img/lant.jpg" width="150px" height="150px" >
     <div class="media-body">
       <h5 class="mt-0 mb-1">Lanterna  </h5>
      item utilizado para iluminar lugares escuros durante acampamentos
@@ -68,7 +68,7 @@
   
 </br> 
   <li class="media">
-    <img class="mr-3" src="img/item1.jpg" width="150px" height="150px"  >
+    <img class="mr-3" src="img/saco.jpg" width="150px" height="150px"  >
     <div class="media-body">
       <h5 class="mt-0 mb-1">Saco de Dormir - Acampamento </h5>
      Saco de dormir para auxiliar na dormida durante acampamento, de facil transporte. 
