--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -21,13 +21,13 @@
     <a class="nav-link active" href="#">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="promocao.html">Promoções</a>
+    <a class="nav-link active" href="promocao.html">Promoções</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Ajuda</a>
+    <a class="nav-link active" href="#">Ajuda</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link " href="#">Cadastro</a>
+    <a class="nav-link  active" href="#">Cadastro</a>
   </li>
 </ul>
 
