--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -18,16 +18,16 @@
   
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item" class="btn btn-outline-danger">
-    <a class="nav-link active" href="#">Home</a>
+    <a class="nav-link active" href="cadastro.html">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link active" href="promocao.html">Promoções</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="#">Ajuda</a>
+    <a class="nav-link active" href="ajuda.html">Ajuda</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link  active" href="#">Cadastro</a>
+    <a class="nav-link  active" href="cadastro.html">Cadastro</a>
   </li>
 </ul>
 
