--- a/projeto02/promocao.html
+++ b/projeto02/promocao.html
@@ -17,19 +17,26 @@
   
   
 <ul class="nav nav-pills nav-fill">
-  <li class="nav-item">
-    <a class="nav-link active" href="index.html">Home</a>
+  <li class="nav-item" class="btn btn-outline-danger">
+    <a class="nav-link active" href="cadastro.html">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="promocao.html">Promoções</a>
+    <a class="nav-link active" href="promocao.html">Promoções</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Ajuda</a>
+    <a class="nav-link active" href="ajuda.html">Ajuda</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link " href="#">Cadastro</a>
+    <a class="nav-link  active" href="cadastro.html">Cadastro</a>
   </li>
 </ul>
+
+</br>
+</br>
+</br>
+</br>
+
+<img src="projeto02/img/item1.jpg" class="img-fluid" alt="Amadeu Store ">
 
   </body>
   </html>
