--- a/projeto02/cadastro.html
+++ b/projeto02/cadastro.html
@@ -14,8 +14,38 @@
  
    
   <body>
+		
+		<ul class="nav nav-pills nav-fill">
+  <li class="nav-item" class="btn btn-outline-danger">
+    <a class="nav-link active" href="cadastro.html">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="promocao.html">Promoções</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="ajuda.html">Ajuda</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link  active" href="cadastro.html">Cadastro</a>
+  </li>
+</ul>
+
+</br>
+</br>
+</br>
+</br>
+
+<img src="projeto02/img/item1.jpg" class="img-fluid" alt="Amadeu Store ">
   
-  
+</br>
+</br>
+</br>
+</br>
+</br>
+<div class="p-3 mb-2 bg-danger text-white"> Cadastro</div>
+</br>
+</br>
+</br>
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
     <a class="nav-link active" href="index.html">Home</a>
