--- a/projeto02/cadastro.html
+++ b/projeto02/cadastro.html
@@ -46,21 +46,7 @@
 </br>
 </br>
 </br>
-<ul class="nav nav-pills nav-fill">
-  <li class="nav-item">
-    <a class="nav-link active" href="index.html">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="promocao.html">Promoções</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="ajuda.html">Ajuda</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="cadastro.html">Cadastro</a>
-  </li>
-</ul>
-		
+
 		<form>
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -68,34 +54,34 @@
       <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
     </div>
     <div class="form-group col-md-6">
-      <label for="inputPassword4">Password</label>
-      <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+      <label for="inputPassword4">Senha</label>
+      <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
     </div>
   </div>
   <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    <label for="inputAddress">Endereço</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="exemplo Rua , nº">
   </div>
   <div class="form-group">
-    <label for="inputAddress2">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+    <label for="inputAddress2">Referencia</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Referencia">
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
+      <label for="inputCity">Cidade</label>
+      <input type="text" class="form-control" id="Cidade">
     </div>
     <div class="form-group col-md-4">
-      <label for="inputState">State</label>
+      <label for="inputState">Estado</label>
       <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
+        <option selected> Escolha</option>
+        <option>RN</option>
+				<option>PB</option>
+				<option>BA</option>
+				<option>PI</option>
       </select>
     </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
+  
   </div>
   <div class="form-group">
     <div class="form-check">
