--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -18,7 +18,7 @@
   
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item" class="btn btn-outline-danger">
-    <a class="nav-link active" href="cadastro.html">Home</a>
+    <a class="nav-link active" href="index.html">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link active" href="promocao.html">Promoções</a>
@@ -52,7 +52,11 @@
     <div class="media-body">
       <h5 class="mt-0 mb-1">Pederneira </h5>
      item utilizado para ajudar a acender fogueiras ou criar faiscas. 
+			
 	 </br>
+		<h7>
+				Preço: 15,00 R$
+			</h7>
 <button type="button" class="btn btn-outline-danger">Comprar</button>
   </li>
   </br>
@@ -62,7 +66,11 @@
     <div class="media-body">
       <h5 class="mt-0 mb-1">Lanterna  </h5>
      item utilizado para iluminar lugares escuros durante acampamentos
+			
 	 </br>
+		<h7>
+				Preço: 15,00 R$
+			</h7>
 <button type="button" class="btn btn-outline-danger">Comprar</button>
   </li>
   
@@ -73,6 +81,9 @@
       <h5 class="mt-0 mb-1">Saco de Dormir - Acampamento </h5>
      Saco de dormir para auxiliar na dormida durante acampamento, de facil transporte. 
 	 </br>
+		<h7>
+				Preço: 15,00 R$
+			</h7>
 <button type="button" class="btn btn-outline-danger">Comprar</button>
   </li>
 </ul>
