--- a/projeto02/cadastro.html
+++ b/projeto02/cadastro.html
@@ -17,7 +17,7 @@
 		
 		<ul class="nav nav-pills nav-fill">
   <li class="nav-item" class="btn btn-outline-danger">
-    <a class="nav-link active" href="cadastro.html">Home</a>
+    <a class="nav-link active" href="index.html">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link active" href="promocao.html">Promoções</a>
@@ -87,7 +87,7 @@
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="gridCheck">
       <label class="form-check-label" for="gridCheck">
-        Check me out
+        Todos os dados estão corretos 
       </label>
     </div>
   </div>
