--- a/projeto02/promocao.html
+++ b/projeto02/promocao.html
@@ -18,7 +18,7 @@
   
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item" class="btn btn-outline-danger">
-    <a class="nav-link active" href="cadastro.html">Home</a>
+    <a class="nav-link active" href="index.html">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link active" href="promocao.html">Promoções</a>
