--- a/projeto02/ajuda.html
+++ b/projeto02/ajuda.html
@@ -38,6 +38,12 @@
 
 <img src="projeto02/img/item1.jpg" class="img-fluid" alt="Amadeu Store ">
 
+<div class="p-3 mb-2 bg-danger text-white">Central de Duvidas</div>
+
+<p class="text-danger">A central de ajuda visa buscar uma melhor experiencia no uso do site</p>
+<p class="text-danger">Você pode realizar compras apenas após criar o seu cadastro </p>
+<p class="text-danger">Automaticamente você será direcionado para a pagina para colocar os dados das compras</p>
+
   </body>
   </html>
   
