--- a/projeto02/promocao.html
+++ b/projeto02/promocao.html
@@ -38,6 +38,12 @@
 
 <img src="projeto02/img/item1.jpg" class="img-fluid" alt="Amadeu Store ">
 
+<div class="p-3 mb-2 bg-danger text-white">Promoções</div>
+<p class="text-danger">Após a primeira compra você ganha um cupom de desconto que pode ser utilizado na proxima compra</p>
+
+<div class="p-3 mb-2 bg-warning text-dark">.bg-warning</div>
+<p class="text-danger"> O seu cumpon de desconto foi feito para ajudar você nossos clientes fieis</p>
+
   </body>
   </html>
   
