--- a/projeto02/promocao.html
+++ b/projeto02/promocao.html
@@ -41,10 +41,20 @@
 <div class="p-3 mb-2 bg-danger text-white">Promoções</div>
 <p class="text-danger">Após a primeira compra você ganha um cupom de desconto que pode ser utilizado na proxima compra</p>
 
-<div class="p-3 mb-2 bg-warning text-dark">.bg-warning</div>
+<div class="p-3 mb-2 bg-warning text-dark"> Desconto</div>
 <p class="text-danger"> O seu cumpon de desconto foi feito para ajudar você nossos clientes fieis</p>
 
-
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
  <table class="table table-dark">
   <thead>
     <tr>
