modificacao de contato

--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -37,7 +37,7 @@
 </br>
 </br>
 
-<img src="projeto02/img/item1.jpg" class="img-fluid" alt="Amadeu Store ">
+<img src="img/logo.jpg" class="img-fluid" alt="Amadeu Store ">
 
 
 
