modificacao de contato

--- a/projeto02/ajuda.html
+++ b/projeto02/ajuda.html
@@ -36,7 +36,7 @@
 </br>
 </br>
 
-<img src="projeto02/img/logo.jpg" class="img-fluid" alt="Amadeu Store ">
+<img src="projeto02/img/logo.JPG" class="img-fluid" alt="Amadeu Store ">
 
 <div class="p-3 mb-2 bg-danger text-white">Central de Duvidas</div>
 
