--- a/projeto02/promocao.html
+++ b/projeto02/promocao.html
@@ -36,7 +36,7 @@
 </br>
 </br>
 
-<img src="projeto02/img/item1.jpg" class="img-fluid" alt="Amadeu Store ">
+<img src="projeto02/img/logo.JPG" class="img-fluid" alt="Amadeu Store ">
 
 <div class="p-3 mb-2 bg-danger text-white">Promoções</div>
 <p class="text-danger">Após a primeira compra você ganha um cupom de desconto que pode ser utilizado na proxima compra</p>
