modificacao de contato

--- a/projeto02/cadastro.html
+++ b/projeto02/cadastro.html
@@ -35,7 +35,7 @@
 </br>
 </br>
 
-<img src="projeto02/img/logo.JPG" class="img-fluid" alt="Amadeu Store ">
+<img src="img/logo.JPG" class="img-fluid" height="1000px">
   
 </br>
 </br>
