--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -32,12 +32,7 @@
   </li>
 </ul>
 
-</br>
-</br>
-</br>
-</br>
-
-<img src="img/logo.JPG" class="img-fluid">
+<img src="img/logo.JPG" class="img-fluid" height="1000px">
 
 
 
