modificacao de contato

--- a/projeto02/promocao.html
+++ b/projeto02/promocao.html
@@ -30,13 +30,9 @@
     <a class="nav-link  active" href="cadastro.html">Cadastro</a>
   </li>
 </ul>
+<br>
 
-</br>
-</br>
-</br>
-</br>
-
-<img src="img/logo.JPG" class="img-fluid" height="1000px">
+<img src="img/logo.JPG" class="img-fluid" height="500pxpx">
 
 <div class="p-3 mb-2 bg-danger text-white">Promoções</div>
 <p class="text-danger">Após a primeira compra você ganha um cupom de desconto que pode ser utilizado na proxima compra</p>
