--- a/projeto02/ajuda.html
+++ b/projeto02/ajuda.html
@@ -15,7 +15,7 @@
    
   <body>
   
-  
+<img src="img/logo.JPG" class="img-fluid" width="1700px" height="150px">
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item" class="btn btn-outline-danger">
     <a class="nav-link active" href="index.html">Home</a>
@@ -30,9 +30,6 @@
     <a class="nav-link  active" href="cadastro.html">Cadastro</a>
   </li>
 </ul>
-</br>
-
-<img src="img/logo.JPG" class="img-fluid" height="1000px">
 
 <div class="p-3 mb-2 bg-danger text-white">Central de Duvidas</div>
 
