--- a/projeto02/cadastro.html
+++ b/projeto02/cadastro.html
@@ -15,7 +15,8 @@
    
   <body>
 		
-		<ul class="nav nav-pills nav-fill">
+	<img src="img/logo.JPG" class="img-fluid" width="1700px" height="150px">
+<ul class="nav nav-pills nav-fill">
   <li class="nav-item" class="btn btn-outline-danger">
     <a class="nav-link active" href="index.html">Home</a>
   </li>
@@ -29,9 +30,6 @@
     <a class="nav-link  active" href="cadastro.html">Cadastro</a>
   </li>
 </ul>
-
-
-<img src="img/logo.JPG" class="img-fluid" height="1000px">
   
 </br>
 </br>
