--- a/projeto02/promocao.html
+++ b/projeto02/promocao.html
@@ -16,6 +16,7 @@
   <body>
   
   
+<img src="img/logo.JPG" class="img-fluid" width="1700px" height="150px">
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item" class="btn btn-outline-danger">
     <a class="nav-link active" href="index.html">Home</a>
@@ -30,9 +31,6 @@
     <a class="nav-link  active" href="cadastro.html">Cadastro</a>
   </li>
 </ul>
-<br>
-
-<img src="img/logo.JPG" class="img-fluid" height="500pxpx">
 
 <div class="p-3 mb-2 bg-danger text-white">Promoções</div>
 <p class="text-danger">Após a primeira compra você ganha um cupom de desconto que pode ser utilizado na proxima compra</p>
