modificacao de contato

--- a/projeto02/cadastro.html
+++ b/projeto02/cadastro.html
@@ -15,7 +15,7 @@
    
   <body>
 		
-	<img src="img/logo.JPG" class="img-fluid" width="1700px" height="150px">
+	<img src="img/logo1.JPG" class="img-fluid" width="1700px" height="150px">
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item" class="btn btn-outline-danger">
     <a class="nav-link active" href="index.html">Home</a>
