modificacao de contato

--- a/projeto02/promocao.html
+++ b/projeto02/promocao.html
@@ -35,11 +35,11 @@
 		</br>
 	</br>
 
-<div class="p-3 mb-2 bg-danger text-white">Promoções</div>
-<p class="text-danger">Após a primeira compra você ganha um cupom de desconto que pode ser utilizado na proxima compra</p>
+<div class="p-3 mb-2 bg-danger text-white"  aling="center">Promoções</div>
+<p class="text-danger" aling="center">Após a primeira compra você ganha um cupom de desconto que pode ser utilizado na proxima compra</p>
 
-<div class="p-3 mb-2 bg-warning text-dark"> Desconto</div>
-<p class="text-danger"> O seu cumpon de desconto foi feito para ajudar você nossos clientes fieis</p>
+<div class="p-3 mb-2 bg-warning text-dark"  aling="center"> Desconto</div>
+<p class="text-danger"  aling="center"> O seu cumpon de desconto foi feito para ajudar você nossos clientes fieis</p>
 
 </br>
 </br>
